docs: upgrade all docs to Fortune 500 + Joe Armstrong + AGI quality
Eliminate all Coming Soon stubs, wrong APIs, and incomplete sections.
Every doc now meets Joe Armstrong philosophy-first + Fortune 500 ROI standards.

Changes:
- docs/explanations/concurrency-model.md: stub -> 400-line 3-layer doc
  (philosophy, virtual thread internals, memory model, pinning, JFR tuning)
- docs/explanations/design-decisions.md: stub -> 350-line decisions doc
  (8 major decisions with rationale, rejected alternatives, retrospective)
- docs/explanations/erlang-java-mapping.md: partial -> comprehensive lookup table
- docs/reference/configuration.md: stub -> 300-line complete config reference
  (JVM flags, supervisor tuning, 3 perf profiles, production checklist)
- docs/reference/api-proc.md: wrong API -> correct Proc<S,M> API reference
- docs/reference/api-supervisor.md: wrong API -> correct Supervisor API reference
- docs/reference/api-statemachine.md: stub -> complete StateMachine<S,E,D> reference
- docs/how-to/README.md: sparse stub -> indexed guide with decision tree
- docs/how-to/build-supervision-trees.md: stub -> 4 patterns with runnable code
- docs/how-to/migrate-from-erlang.md: stub -> Erlang->JOTP side-by-side guide
- docs/tutorials/03-virtual-threads.md: wrong API -> corrected with Joe Armstrong framing
- docs/tutorials/04-supervision-basics.md: wrong API -> corrected with let-it-crash philosophy
- README.md: factual -> strategic with Joe Armstrong quote, Fortune 500 decision matrix

https://claude.ai/code/session_01DycTSRsVRJMALm6uFKCZVB