@@ -1,295 +1,290 @@
-# Tutorial 03: Virtual Threads
+# Tutorial 03: Virtual Threads and Process Scale
 
-Virtual threads are the foundation of JOTP's lightweight concurrency. In this tutorial, you'll understand how Java 26 virtual threads enable millions of concurrent processes without the overhead of platform threads.
+> "In Erlang, you never think about threads. You think about processes. Threads are an implementation detail. Processes are the idea."
+> — Joe Armstrong
 
-## What Are Virtual Threads?
+This tutorial teaches you to think in processes, not threads. By the end, you'll understand why JOTP can run millions of concurrent processes on a standard JVM — and you'll have seen it yourself.
 
-**Virtual threads** (introduced in Java 21, JEP 444) are:
+**Prerequisites:** [Tutorial 02: Your First Process](02-first-process.md)
 
-- **Lightweight**: Millions can run on a single machine (vs. thousands of platform threads)
-- **Non-preemptive**: JVM scheduler runs them cooperatively
-- **Stackful**: Can block at any point in the call stack (no callback chains)
-- **Structured**: Run within scopes with clear lifecycle guarantees
-- **Cheap to spawn**: ~1KB memory vs. ~1MB for platform threads
+**What you'll learn:**
+- How virtual threads enable millions of processes
+- The difference between a process (your concern) and a thread (the JVM's concern)
+- What virtual thread pinning is and how to avoid it
+- How message backpressure naturally limits throughput
 
-**How they work:**
+---
 
-```
-Platform Threads (1:1 kernel threads)
-└── Virtual Threads (M:N scheduling)
-    ├── Carrier Thread 1
-    ├── Carrier Thread 2
-    └── Carrier Thread N
-```
+## Part 1: The Conceptual Shift
 
-When a virtual thread blocks (e.g., waiting for I/O or a message), the JVM unmounts it from its carrier thread, allowing other virtual threads to run. This is called **structured concurrency**.
+### Old Model: Threads (Your Problem)
 
-## Virtual Threads vs. Platform Threads
-
-| Aspect | Platform Thread | Virtual Thread |
-|--------|-----------------|----------------|
-| Memory per thread | ~1-2 MB | ~1 KB |
-| Max threads per JVM | ~10,000 | ~1,000,000+ |
-| Kernel context switch | Yes (expensive) | No (JVM scheduler) |
-| Blocking behavior | Blocks carrier | Auto-unmounts |
-| Use case | I/O-heavy services | Millions of concurrent units |
-
-## JOTP Processes Use Virtual Threads
-
-Every `Proc<S,M>` runs in its own virtual thread:
+In traditional Java, concurrency was your problem. You created threads, managed pools, synchronized shared state:
 
 ```java
-var proc = Proc.start(state -> msg -> state + 1, 0);
-// Internally: Proc uses ThreadFactory.ofVirtual() to spawn the process
+// Platform thread: ~1 MB stack, OS-managed context switch
+Thread thread = new Thread(() -> {
+    while (running) {
+        T task = queue.take();   // Blocks OS thread!
+        process(task);
+    }
+});
 ```
 
-This means you can create thousands of processes without performance degradation.
+Maximum practical scale: ~10,000 platform threads per JVM.
 
-## Example 1: Creating a Virtual Thread Directly
+### New Model: Virtual Threads (JVM's Problem)
 
-While JOTP usually manages virtual threads, you can create them explicitly:
+Virtual threads let the JVM manage scheduling. You write sequential code:
 
 ```java
-import java.util.concurrent.*;
+// Virtual thread: ~8 KB initial stack, JVM-managed
+Thread.startVirtualThread(() -> {
+    while (running) {
+        T task = queue.take();   // Parks virtual thread, does NOT block OS thread
+        process(task);
+    }
+});
+```
 
-public class VirtualThreadExample {
+Maximum practical scale: **10 million+ virtual threads per JVM**.
+
+### JOTP: Process-Oriented (Your Mental Model)
+
+In JOTP, you don't even think about virtual threads. You create processes:
+
+```java
+// Spawns one virtual thread — invisible to you
+var proc = new Proc<>(
+    initialState,
+    (state, msg) -> newState  // Your handler runs when messages arrive
+);
+```
+
+The virtual thread runs your handler. It blocks waiting for messages. You think in **processes**. The JVM manages threads.
+
+---
+
+## Exercise 1: Scale — 100,000 Processes
+
+Verify the scale claim directly:
+
+```java
+import io.github.seanchatmangpt.jotp.*;
+import java.util.ArrayList;
+import java.util.List;
+
+public class ScaleDemo {
+    record PingMsg() {}
+
     public static void main(String[] args) throws Exception {
-        // Create a virtual thread directly
-        Thread vt = Thread.ofVirtual()
-            .name("worker-1")
-            .start(() -> {
-                System.out.println("Running in virtual thread: " +
-                    Thread.currentThread().getName());
-                // Can block here without blocking carrier thread
-                Thread.sleep(1000);
-            });
+        int count = 100_000;
+        List<Proc<Integer, PingMsg>> procs = new ArrayList<>(count);
 
-        vt.join();  // Wait for it to finish
+        long startMs = System.currentTimeMillis();
+
+        for (int i = 0; i < count; i++) {
+            procs.add(new Proc<>(0, (state, msg) -> state + 1));
+        }
+
+        long spawnMs = System.currentTimeMillis() - startMs;
+        System.out.printf("Spawned %,d processes in %,d ms%n", count, spawnMs);
+
+        Runtime rt = Runtime.getRuntime();
+        long usedMb = (rt.totalMemory() - rt.freeMemory()) / 1_000_000;
+        System.out.printf("Heap used: %,d MB (%.1f KB per process)%n",
+            usedMb, usedMb * 1000.0 / count);
+
+        for (var proc : procs) proc.stop();
     }
 }
 ```
 
-## Example 2: Structured Concurrency with StructuredTaskScope
-
-Java 26 provides `StructuredTaskScope` for managing multiple virtual threads with guaranteed cleanup:
-
-```java
-import java.util.concurrent.*;
-
-public class StructuredConcurrencyExample {
-    public static void main(String[] args) throws Exception {
-        try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-            // Spawn multiple tasks
-            var future1 = scope.fork(() -> longRunningTask1());
-            var future2 = scope.fork(() -> longRunningTask2());
-            var future3 = scope.fork(() -> longRunningTask3());
-
-            // Wait for all to complete (or first to fail)
-            scope.join();  // Blocks until all done or one fails
-
-            // Get results
-            var result1 = future1.resultNow();
-            var result2 = future2.resultNow();
-            var result3 = future3.resultNow();
-
-            System.out.println("All tasks completed: " +
-                result1 + ", " + result2 + ", " + result3);
-        } catch (StructureViolationException e) {
-            System.out.println("Task failed: " + e);
-        }
-    }
-
-    static String longRunningTask1() { return "Task 1 done"; }
-    static String longRunningTask2() { return "Task 2 done"; }
-    static String longRunningTask3() { return "Task 3 done"; }
-}
+**Expected output:**
+```
+Spawned 100,000 processes in 3,200 ms
+Heap used: 450 MB (4.5 KB per process)
 ```
 
-## Example 3: Virtual Threads in JOTP Processes
+Compare: try `new Thread(...)` 100K times — you'll get `OutOfMemoryError`.
 
-JOTP processes are built on virtual threads. Here's how they interact:
+---
 
-```java
-public class JOTPVirtualThreadExample {
-    public static void main(String[] args) throws Exception {
-        // Create 1000 processes, each in a virtual thread
-        var processes = new java.util.ArrayList<>();
+## Exercise 2: Blocking Is Cheap
 
-        for (int i = 0; i < 1000; i++) {
-            final int id = i;
-            var proc = Proc.start(
-                state -> msg -> {
-                    System.out.println("Process " + id + " got: " + msg);
-                    return state + 1;
-                },
-                0
-            );
-            processes.add(proc);
-        }
-
-        // Send messages to all processes concurrently
-        for (int i = 0; i < processes.size(); i++) {
-            processes.get(i).send("message " + i);
-        }
-
-        System.out.println("Created 1000 processes with negligible overhead");
-        // This would fail with platform threads!
-    }
-}
-```
-
-## Example 4: Blocking in Virtual Threads
-
-Virtual threads can block without deadlocking because the JVM scheduler unmounts them:
+1,000 processes each blocking 100ms should complete in ~100ms total (not 100,000ms):
 
 ```java
-public class BlockingVirtualThreadExample {
+import io.github.seanchatmangpt.jotp.*;
+import java.util.concurrent.CountDownLatch;
+
+public class BlockingDemo {
+    record SlowMsg() {}
+    record SlowState(int done) {}
+
     public static void main(String[] args) throws Exception {
-        var proc = Proc.start(
-            state -> msg -> {
-                if (msg instanceof String text) {
-                    System.out.println("Processing: " + text);
-                    try {
-                        // Blocking I/O (e.g., database query)
-                        // Virtual thread unmounts here, carrier continues
-                        Thread.sleep(1000);
-                    } catch (InterruptedException e) {
-                        Thread.currentThread().interrupt();
-                    }
-                    System.out.println("Done: " + text);
+        int procCount = 1000;
+        var latch = new CountDownLatch(procCount);
+        var procs = new java.util.ArrayList<Proc<SlowState, SlowMsg>>(procCount);
+
+        for (int i = 0; i < procCount; i++) {
+            procs.add(new Proc<>(new SlowState(0), (state, msg) -> {
+                try {
+                    Thread.sleep(100);  // Parks virtual thread, releases carrier
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
                 }
-                return state;
-            },
-            null
-        );
-
-        // Send multiple messages
-        for (int i = 1; i <= 5; i++) {
-            proc.send("Message " + i);
+                latch.countDown();
+                return new SlowState(state.done() + 1);
+            }));
         }
 
-        Thread.sleep(6000);  // Wait for all to complete
+        long start = System.currentTimeMillis();
+        for (var proc : procs) proc.tell(new SlowMsg());
+        latch.await();
+        System.out.printf("1000 processes × 100ms blocking = %d ms total%n",
+            System.currentTimeMillis() - start);
+        // Expected: ~100ms, not 100,000ms
+
+        for (var proc : procs) proc.stop();
     }
 }
+```
+
+**Expected output:** `1000 processes × 100ms blocking = 112 ms total`
+
+---
+
+## Exercise 3: Virtual Thread Pinning (What to Avoid)
+
+When a virtual thread enters a `synchronized` block, it **pins** to its carrier thread. The carrier cannot run other virtual threads until the lock is released.
+
+**BAD — synchronized pins the carrier:**
+```java
+private static final Object LOCK = new Object();
+
+private static void pinnedMethod() throws InterruptedException {
+    synchronized (LOCK) {
+        Thread.sleep(50);  // PINS carrier thread for 50ms!
+    }
+}
+```
+
+**Run with pinning detection:**
+```bash
+java --enable-preview -Djdk.tracePinnedThreads=short -cp ... MyApp
 ```
 
 Output:
 ```
-Processing: Message 1
-Processing: Message 2
-Processing: Message 3
-Processing: Message 4
-Processing: Message 5
-Done: Message 1
-Done: Message 2
-Done: Message 3
-Done: Message 4
-Done: Message 5
+Thread[#42,ForkJoinPool-1-worker-1,5,CarrierThreads]
+    MyApp.pinnedMethod(MyApp.java:12) <== monitors:1>
 ```
 
-Even though each message takes 1 second to process, all 5 messages complete in ~1 second because they run concurrently in virtual threads!
-
-## Example 5: Scoped Values (Context Propagation)
-
-Java 26 provides `ScopedValue` for passing context to virtual threads without mutable ThreadLocal:
-
+**GOOD — ReentrantLock releases the carrier:**
 ```java
-import java.lang.ScopedValue;
+import java.util.concurrent.locks.ReentrantLock;
 
-public class ScopedValueExample {
-    static final ScopedValue<String> REQUEST_ID = ScopedValue.newInstance();
+private static final ReentrantLock LOCK = new ReentrantLock();
 
-    public static void main(String[] args) throws Exception {
-        var proc = Proc.start(
-            state -> msg -> {
-                if (msg instanceof String) {
-                    // Access scoped value (implicitly inherited)
-                    var requestId = REQUEST_ID.get();
-                    System.out.println("Processing with ID: " + requestId);
-                }
-                return state;
-            },
-            null
-        );
-
-        // Bind scoped value, send message
-        ScopedValue.callWhere(
-            REQUEST_ID, "REQ-12345",
-            () -> {
-                proc.send("Process this");
-                return null;
-            }
-        );
+private static void nonPinnedMethod() throws InterruptedException {
+    LOCK.lock();
+    try {
+        Thread.sleep(50);  // Virtual thread PARKS — carrier is RELEASED
+    } finally {
+        LOCK.unlock();
     }
 }
 ```
 
-## Key Advantages of Virtual Threads in JOTP
-
-1. **Scales to millions** — Create 1M processes without resource exhaustion
-2. **No callback hell** — Write synchronous-looking code (no `then()`, `await()`)
-3. **Natural suspension** — Blocking is natural; scheduler handles unmounting
-4. **Fail-fast debugging** — Stack traces show full call chains
-5. **Better resource utilization** — Carrier threads do actual work only when needed
-
-## Performance Implications
-
-Virtual threads shine in scenarios with:
-
-- **High concurrency** (10,000+ concurrent tasks)
-- **I/O-bound workloads** (databases, HTTP, messaging)
-- **Long-lived connections** (WebSockets, streaming)
-
-They're less beneficial for:
-
-- **CPU-bound workloads** (tight loops, math, data processing)
-- **Low concurrency** (<100 concurrent tasks)
-
-JOTP's sweet spot is **message-driven systems** with **moderate I/O and supervision**.
-
-## Testing Virtual Threads
-
-JUnit 5 provides annotations for virtual thread testing:
-
-```java
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.Disabled;
-
-public class VirtualThreadTest {
-    @Test
-    void testVirtualThread() throws Exception {
-        var proc = Proc.start(state -> msg -> state + 1, 0);
-        proc.send(1);
-        var finalState = proc.ask(msg -> msg,
-            java.time.Duration.ofSeconds(1));
-        assert finalState == 1;
-    }
-
-    // Run this test on a virtual thread executor (experimental)
-    @Test
-    @Disabled("Requires junit-jupiter 5.11+")
-    void testOnVirtualThread() {
-        // Test code here runs in a virtual thread
-    }
-}
-```
-
-## Key Takeaways
-
-- ✅ Virtual threads are **cheap** (1KB vs. 1MB for platform threads)
-- ✅ **Millions** can coexist without OS overhead
-- ✅ **JOTP processes run in virtual threads** automatically
-- ✅ **Blocking is cheap** — JVM unmounts, not the OS
-- ✅ **Structured concurrency** guarantees clean lifecycle with `StructuredTaskScope`
-- ✅ **Scoped values** replace ThreadLocal for cleaner context passing
-
-## What's Next?
-
-1. **[Tutorial 04: Supervision Basics](04-supervision-basics.md)** — Learn how JOTP supervises and restarts processes
-2. **[How-To: Handle Process Failures](../how-to/handle-process-failures.md)** — Implement fault tolerance
-3. **[Explanation: Concurrency Model](../explanations/concurrency-model.md)** — Deep dive into JOTP's threading model
-4. **[Reference: Configuration](../reference/configuration.md)** — Virtual thread configuration options
+**Rule:** In JOTP process handlers, never use `synchronized`. Use `ReentrantLock`, `java.util.concurrent` classes, or immutable records (which need no locking at all).
 
 ---
 
-**Next:** [Tutorial 04: Supervision Basics](04-supervision-basics.md)
+## Exercise 4: Backpressure via ask() Timeout
+
+When a process is overwhelmed, `ask()` creates natural backpressure:
+
+```java
+import io.github.seanchatmangpt.jotp.*;
+import java.time.Duration;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeoutException;
+
+public class BackpressureDemo {
+    record SlowWork() {}
+    record SlowState(int count) {}
+
+    public static void main(String[] args) throws Exception {
+        // Process that takes 200ms per message
+        var slowProc = new Proc<>(new SlowState(0), (state, msg) -> {
+            try { Thread.sleep(200); }
+            catch (InterruptedException e) { Thread.currentThread().interrupt(); }
+            return new SlowState(state.count() + 1);
+        });
+
+        // Caller with 100ms timeout (less than 200ms processing time)
+        int success = 0, timedOut = 0;
+
+        for (int i = 0; i < 10; i++) {
+            try {
+                slowProc.ask(new SlowWork(), Duration.ofMillis(100)).get();
+                success++;
+            } catch (ExecutionException e) {
+                if (e.getCause() instanceof TimeoutException) {
+                    timedOut++;
+                }
+            }
+        }
+
+        System.out.printf("Success: %d, Backpressure signals: %d%n", success, timedOut);
+        slowProc.stop();
+    }
+}
+```
+
+The `ask()` timeout is not just error handling — it is **backpressure**. When the process can't keep up, callers receive `TimeoutException` instead of silently queuing unlimited messages.
+
+**Production pattern (5-second SLA):**
+```java
+try {
+    var result = gateway.ask(new ChargeRequest(amount), Duration.ofSeconds(5)).get();
+    return Response.ok(result);
+} catch (ExecutionException e) {
+    if (e.getCause() instanceof TimeoutException) {
+        return Response.serviceUnavailable("Gateway busy");
+    }
+    throw e;
+}
+```
+
+---
+
+## Summary: The Three Rules
+
+1. **Think in processes, not threads.** Create `Proc<S,M>` for each concurrent concern. Let the JVM manage virtual threads.
+
+2. **Never use `synchronized` in handlers.** Use `ReentrantLock` or immutable records. `synchronized` pins carrier threads and destroys throughput.
+
+3. **Always set `ask()` timeouts.** They are your backpressure mechanism. Without timeouts, a slow consumer silently exhausts memory.
+
+---
+
+## Key Takeaways
+
+| Concept | Virtual Thread Behavior |
+|---------|-------------------------|
+| Memory per process | ~8 KB initial stack (grows on demand) |
+| Blocking (sleep, I/O, queue.take) | Parks virtual thread, releases carrier |
+| `synchronized` block | **Pins** carrier thread — avoid in handlers |
+| `ReentrantLock` | Parks virtual thread — use this instead |
+| Scale | 1M+ processes on commodity hardware |
+
+---
+
+**Previous:** [Tutorial 02: Your First Process](02-first-process.md) | **Next:** [Tutorial 04: Supervision Basics](04-supervision-basics.md)
+
+**See Also:**
+- [Concurrency Model](../explanations/concurrency-model.md) — Deep explanation of virtual thread internals
+- [Configuration Reference](../reference/configuration.md) — Virtual thread scheduler tuning
+- [How-To: Concurrent Pipelines](../how-to/concurrent-pipelines.md) — Fan-out with `Parallel`
